tests/NormalTests/paczka2/big_fuzzy/19882653.err
Error in line 2: TGKyIKHpne A450 30,6
Error in line 20: kD8pIjhRCB A450 39,95
Error in line 26: RFRIvp4G A2O0 24,4
Error in line 28: TGKyIKHpne A210 12,9
Error in line 33: dkOiuHjg S612 13,1
Error in line 58: dkOiuHjg A210 59,3
Error in line 60: TGKyIKHpne A450 71,5
Error in line 61: dkOiuHjg A450 92,6
Error in line 32: kD8pIjhRCB A450 7,1
Error in line 81: dkOiuHjg A450 38,4
Error in line 93: RFRIvp4G S683 7,1
Error in line 101: dkOiuHjg A450 85,95
Error in line 83: dkOiuHjg S683 35,5
Error in line 98: A450 A210 49,7
Error in line 105: TGKyIKHpne S683 39,5
Error in line 111: RFRIvp4G A450 38,2
Error in line 108: A450 A450 161,4
Error in line 116: u3iCgL S683 30,5
Error in line 123: kD8pIjhRCB S683 50,1
Error in line 125: SA2zkd1M S683 94,1
Error in line 129: SA2zkd1M A210 68,0
Error in line 136: A450 S612 -2,7
Error in line 133: SA2zkd1M S683 64,4
Error in line 134: kD8pIjhRCB A450 21,5
Error in line 140: RFRIvp4G A210 3,3
Error in line 137: SA2zkd1M S983 89,5
Error in line 132: dkOiuHjg A450 314,9
Error in line 160: dkOiuHjg S612 77,5
Error in line 164: dkOiuHjg S683 82,5
Error in line 154: u3iCgL A450 5,0
Error in line 188: dkOiuHjg A450 93,4
Error in line 196: dkOiuHjg A210 54,6
Error in line 199: RFRIvp4G A210 25,19
Error in line 173: RFRIvp4G A450 208,5
Error in line 211: TGKyIKHpne A210 71,9
Error in line 214: kD8pIjhRCB A450 14,1
Error in line 200: RFRIvp4G A210 81,3
Error in line 220: u3iCgL S683 45,2
Error in line 219: RFRIvp4G S683 86,7
Error in line 228: TGKyIKHpne A450 27,5
Error in line 226: RFRIvp4G A210 35,2
Error in line 245: u3iCgL S612 5,9
